--- a/f.html
+++ b/f.html
@@ -7,6 +7,6 @@
     <title>الفيديو </title>
 </head>
 <body>
-   <video src="vi.mp4" width="85%" controls></video> 
+   <video src="images and vi/vi.mov" width="85%" controls></video> 
 </body>
 </html>
